Video-Stretch Bug weg

--- a/public/style.css
+++ b/public/style.css
@@ -392,7 +392,7 @@ input::placeholder {
   align-items: center;
   display: flex;
   flex-direction: column;
-  /*max-width: 20em;*/
+  max-width: 20em;
 }
 
 .video-mask {
